// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkCard スナップショット LongText 1`] = `
<body>
  <div>
    <a
      class="link_linkStyle__jc9bkl0 link_linkStyle_display_block__jc9bkl4"
      href="https://syakoo-lab.com/"
    >
      <div
        class="link-card_linkCardStyles_root__1is99uj0"
      >
        <div
          class="link-card_linkCardStyles_body__1is99uj1"
        >
          <div
            class="link-card_linkCardStyles_textContainer__1is99uj2 link-card_linkCardStyles_textContainer_lines_2__1is99uj4"
          >
            <span
              class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_100__xbx8xul text_textStyle_variants_size_100__xbx8xu6 text_textStyle_weight_bold__xbx8xut"
            >
              Sample Title Sample Title Sample Title Sample Title Sample Title
            </span>
          </div>
          <div
            class="link-card_linkCardStyles_textContainer__1is99uj2 link-card_linkCardStyles_textContainer_lines_1__1is99uj3"
          >
            <span
              class="text_textStyle__xbx8xue text_textStyle_color_secondary__xbx8xug text_textStyle_variants_color_secondary__xbx8xu1 text_textStyle_size_50__xbx8xuj text_textStyle_variants_size_50__xbx8xu4 text_textStyle_weight_normal__xbx8xuu"
            >
              sample description sample description sample description sample description
            </span>
          </div>
          <div
            class="flex_flexStyle__12xne02i flex_flexStyle_align_center__12xne02s flex_flexStyle_variants_align_center__12xne027 flex_flexStyle_direction_row__12xne02j flex_flexStyle_gap_50__12xne02x flex_flexStyle_variants_gap_50__12xne02c flex_flexStyle_justify_flexStart__12xne02l flex_flexStyle_variants_justify_flexStart__12xne020"
          >
            <img
              alt=""
              height="14"
              src="https://placehold.jp/3063D4/ffffff/64x64.png"
              width="14"
            />
            <span
              class="text_textStyle__xbx8xue text_textStyle_color_secondary__xbx8xug text_textStyle_variants_color_secondary__xbx8xu1 text_textStyle_size_50__xbx8xuj text_textStyle_variants_size_50__xbx8xu4 text_textStyle_weight_normal__xbx8xuu"
            >
              syakoo-lab.com
            </span>
          </div>
        </div>
        <div
          class="link-card_linkCardStyles_thumbnailWrapper__1is99uj5"
        >
          <img
            alt="Sample Title Sample Title Sample Title Sample Title Sample Title"
            class="link-card_linkCardStyles_thumbnail__1is99uj6"
            src="https://placehold.jp/3063D4/ffffff/400x300.png"
          />
        </div>
      </div>
    </a>
  </div>
</body>
`;

exports[`LinkCard スナップショット Sample 1`] = `
<body>
  <div>
    <a
      class="link_linkStyle__jc9bkl0 link_linkStyle_display_block__jc9bkl4"
      href="https://syakoo-lab.com/"
    >
      <div
        class="link-card_linkCardStyles_root__1is99uj0"
      >
        <div
          class="link-card_linkCardStyles_body__1is99uj1"
        >
          <div
            class="link-card_linkCardStyles_textContainer__1is99uj2 link-card_linkCardStyles_textContainer_lines_2__1is99uj4"
          >
            <span
              class="text_textStyle__xbx8xue text_textStyle_color_currentColor__xbx8xui text_textStyle_variants_color_currentColor__xbx8xu3 text_textStyle_size_100__xbx8xul text_textStyle_variants_size_100__xbx8xu6 text_textStyle_weight_bold__xbx8xut"
            >
              Sample Title
            </span>
          </div>
          <div
            class="link-card_linkCardStyles_textContainer__1is99uj2 link-card_linkCardStyles_textContainer_lines_1__1is99uj3"
          >
            <span
              class="text_textStyle__xbx8xue text_textStyle_color_secondary__xbx8xug text_textStyle_variants_color_secondary__xbx8xu1 text_textStyle_size_50__xbx8xuj text_textStyle_variants_size_50__xbx8xu4 text_textStyle_weight_normal__xbx8xuu"
            >
              sample description
            </span>
          </div>
          <div
            class="flex_flexStyle__12xne02i flex_flexStyle_align_center__12xne02s flex_flexStyle_variants_align_center__12xne027 flex_flexStyle_direction_row__12xne02j flex_flexStyle_gap_50__12xne02x flex_flexStyle_variants_gap_50__12xne02c flex_flexStyle_justify_flexStart__12xne02l flex_flexStyle_variants_justify_flexStart__12xne020"
          >
            <img
              alt=""
              height="14"
              src="https://placehold.jp/3063D4/ffffff/64x64.png"
              width="14"
            />
            <span
              class="text_textStyle__xbx8xue text_textStyle_color_secondary__xbx8xug text_textStyle_variants_color_secondary__xbx8xu1 text_textStyle_size_50__xbx8xuj text_textStyle_variants_size_50__xbx8xu4 text_textStyle_weight_normal__xbx8xuu"
            >
              syakoo-lab.com
            </span>
          </div>
        </div>
        <div
          class="link-card_linkCardStyles_thumbnailWrapper__1is99uj5"
        >
          <img
            alt="Sample Title"
            class="link-card_linkCardStyles_thumbnail__1is99uj6"
            src="https://placehold.jp/3063D4/ffffff/400x300.png"
          />
        </div>
      </div>
    </a>
  </div>
</body>
`;
